# fgsl

./: .gitignore  .travis.yml  Doxyfile  Makefile  Makefile.am  NEWS  README  README_WORKFLOW  checktypes.c  configure  configure.ac  fgsl.F90  fgsl.f90  fgsl.pc.in  fgsl.spec.in  fgsl_utils.c
api/: Makefile.am  array.finc  bspline.finc  chebyshev.finc  complex.finc  deriv.finc  dht.finc  eigen.finc  error.finc  fft.finc  filter.finc  fit.finc  histogram.finc  ieee.finc  integration.finc  interp.finc  io.finc  linalg.finc  math.finc  min.finc  misc.finc  montecarlo.finc  movstat.finc  multifit.finc  multilarge.finc  multimin.finc  multiroots.finc  nlfit.finc  ntuple.finc  ode.finc  permutation.finc  poly.finc  rng.finc  roots.finc  rstat.finc  siman.finc  sort.finc  specfunc.finc  splinalg.finc  spmatrix.finc  (+3 more)
doc/: Makefile  Makefile.am  complex.texi  err.texi  fgsl-ref.texi  freemanuals.texi  html.tgz  integration.texi  intro.texi  math.texi  permutation.texi  poly.texi  random.texi  sort.texi  specfunc.texi  usage.texi  vectors.texi  version-ref.texi
doc/codefrags/: errhand.f90  math_1.f90  math_2.f90  math_3.f90  math_4.f90
doc/examples/: Makefile  Makefile.am  bspline_deriv.f90  bspline_gram.f90  bspline_gram_template.nml  bspline_interp.f90  bspline_knots.f90  bspline_lsbreak.f90  bspline_lsend.f90  bspline_lsorder.f90  bspline_per.f90  bspline_proj.f90  cdf.f90  cheb.f90  cheb.out  combination.F90  combination.f90  diff.f90  dwt.F90  dwt.f90  eigen.f90  eigen.out  eigen_nonsymm.f90  eigen_nonsymm.out  error_1.f90  error_2.f90  error_3.F90  error_3.f90  error_4.f90  fft.f90  fft.out  fitting.f90  fitting2.f90  fitting3.f90  gaussfilt.f90  histogram.F90  histogram.f90  histogram2d.f90  ieee.f90  ieeeround.f90  (+47 more)
doc/forum/: Makefile  fgsl_disc.tex
doc/html/: Comments.html  Comments_01on_01Hankel_01transforms.html  Comments_01on_01IEEE_01support.html  Comments_01on_01auxiliary_01I_2O_01routines.html  Comments_01on_01basis_01splines.html  Comments_01on_01chebyshev_01approximation.html  Comments_01on_01complex_01numbers.html  Comments_01on_01digital_01filtering.html  Comments_01on_01eigensystems.html  Comments_01on_01elementary_01mathematical_01functions.html  Comments_01on_01error_01handling.html  Comments_01on_01fast_01Fourier_01transforms.html  Comments_01on_01fitting_01of_01functions.html  Comments_01on_01histograms.html  Comments_01on_01interpolation_01routines.html  Comments_01on_01large_01linear_01least_01square_01systems.html  Comments_01on_01linear_01algebra_01routines.html  Comments_01on_01minimization_01routines.html  Comments_01on_01miscellaneous_01support_01routines.html  Comments_01on_01monte_01carlo_01routines.html  Comments_01on_01moving_01window_01statistics.html  Comments_01on_01multidimensional_01minimization.html  Comments_01on_01multidimensional_01root_01finding.html  Comments_01on_01nonlinear_01least_01squares_01fitting.html  Comments_01on_01ntuples.html  Comments_01on_01numerical_01derivatives.html  Comments_01on_01numerical_01integration_01routines.html  Comments_01on_01ordinary_01differential_01equations.html  Comments_01on_01permutations_00_01combinations_01and_01multisets.html  Comments_01on_01polynomials.html  Comments_01on_01random_01numbers.html  Comments_01on_01root_01finding.html  Comments_01on_01running_01statistics.html  Comments_01on_01series_01acceleration.html  Comments_01on_01simulated_01annealing.html  Comments_01on_01sorting.html  Comments_01on_01sparse_01matrix_01routines.html  Comments_01on_01special_01functions.html  Comments_01on_01statistical_01functions.html  Comments_01on_01vectors_01and_01matrices.html  (+973 more)
doc/latex/: Comments.tex  Comments_01on_01Hankel_01transforms.tex  Comments_01on_01IEEE_01support.tex  Comments_01on_01auxiliary_01I_2O_01routines.tex  Comments_01on_01basis_01splines.tex  Comments_01on_01chebyshev_01approximation.tex  Comments_01on_01complex_01numbers.tex  Comments_01on_01eigensystems.tex  Comments_01on_01elementary_01mathematical_01functions.tex  Comments_01on_01error_01handling.tex  Comments_01on_01fast_01Fourier_01transforms.tex  Comments_01on_01fitting_01of_01functions.tex  Comments_01on_01histograms.tex  Comments_01on_01interpolation_01routines.tex  Comments_01on_01large_01linear_01least_01square_01systems.tex  Comments_01on_01linear_01algebra_01routines.tex  Comments_01on_01minimization_01routines.tex  Comments_01on_01miscellaneous_01support_01routines.tex  Comments_01on_01monte_01carlo_01routines.tex  Comments_01on_01multidimensional_01minimization.tex  Comments_01on_01multidimensional_01root_01finding.tex  Comments_01on_01nonlinear_01least_01squares_01fitting.tex  Comments_01on_01ntuples.tex  Comments_01on_01numerical_01derivatives.tex  Comments_01on_01numerical_01integration_01routines.tex  Comments_01on_01ordinary_01differential_01equations.tex  Comments_01on_01permutations_00_01combinations_01and_01multisets.tex  Comments_01on_01polynomials.tex  Comments_01on_01random_01numbers.tex  Comments_01on_01root_01finding.tex  Comments_01on_01running_01statistics.tex  (+253 more)
interface/: Makefile.am  array.finc  bspline.finc  chebyshev.finc  complex.finc  deriv.finc  dht.finc  eigen.finc  error.finc  fft.finc  filter.finc  fit.finc  generics.finc  histogram.finc  ieee.finc  integer_ilp32.finc  integer_ilp64.finc  integration.finc  interp.finc  io.finc  linalg.finc  math.finc  min.finc  misc.finc  montecarlo.finc  movstat.finc  multifit.finc  multilarge.finc  multimin.finc  multiroots.finc  nlfit.finc  ntuple.finc  ode.finc  permutation.finc  poly.finc  rng.finc  roots.finc  rstat.finc  siman.finc  sort.finc  (+6 more)
tests/: Makefile  Makefile.am  array.f90  bspline.f90  chebyshev.f90  deriv.f90  eigen.f90  error.F90  error.sh  fft.f90  fit.F90  histogram.f90  ieee_utils.f90  integration.F90  integration.f90  interp.f90  interp2d.f90  linalg.F90  linalg.f90  math.f90  minim.f90  mod_unit.f90  montecarlo.f90  multimin.f90  multiroots.f90  nlfit.F90  nlfit.f90  ntuple.f90  ode.f90  permutation.F90  permutation.f90  poly.F90  poly.f90  rng.f90  roots.f90  runtests.sh  sf_mathieu.f90  siman.f90  sort.F90  sort.f90  (+4 more)
(+200 files in other folders)
