EXTRA_DIST = array.finc       dht.finc         histogram.finc   linalg.finc      multifit.finc    permutation.finc sort.finc \
bspline.finc     eigen.finc       ieee.finc        math.finc        multimin.finc    poly.finc        specfunc.finc \
chebyshev.finc   error.finc       integration.finc min.finc         multiroots.finc  rng.finc         statistics.finc \
complex.finc     fft.finc         interp.finc      misc.finc        ntuple.finc      roots.finc       sum_levin.finc \
deriv.finc       fit.finc         io.finc          montecarlo.finc  ode.finc         siman.finc       wavelet.finc

