

EXTRA_DIST = array.finc         eigen.finc         ieee.finc          linalg.finc        multimin.finc      rng.finc           sum_levin.finc \
bspline.finc       error.finc         math.finc          multiroots.finc    roots.finc         wavelet.finc \
chebyshev.finc     fft.finc           min.finc           ntuple.finc        siman.finc \
complex.finc       fit.finc           integration.finc   misc.finc          ode.finc           sort.finc \
deriv.finc         generics.finc      interp.finc        montecarlo.finc    permutation.finc   specfunc.finc \
dht.finc           histogram.finc     io.finc            multifit.finc      poly.finc          statistics.finc
